# lime_survey_api_wrapper

./: .gitignore  ANALYSIS.md  DATA_SAFETY.md  GETTING_STARTED.md  LICENSE  README.md  debug_surveys.py  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  setup_dev.py
docs/: conf.py  index.rst  installation.rst
docs/_static/: custom.css
docs/api/: client.rst  modules.rst
examples/: README_DEMO.md  analyzing_survey.py  basic_usage.py  interactive_demo.py  mock_data_dashboard_demo.py  run_dashboard.py  simple_api_demo.py
examples/notebooks/: .gitignore  advanced_viz_example.py  demo_complete_viz.py  netquest_dashboard.py  run_dashboard.py  test_dashboard.py  test_new_viz.py
secrets/: credentials.ini.template
src/lime_survey_analyzer/: __init__.py  _version.py  analyser.py  analysis.py  client.py  exceptions.py  old_analyzing_survey.py  session.py  structures.py  types.py
src/lime_survey_analyzer/managers/: __init__.py  base.py  participant.py  question.py  response.py  survey.py
src/lime_survey_analyzer/models/: __init__.py  core.py  properties.py  question_answer_codes.py  question_types.py  questions.py
src/lime_survey_analyzer/utils/: display.py  logging.py
src/lime_survey_analyzer/visualizations/: __init__.py  conditional_graph.py
src/lime_survey_analyzer/viz/: README.md  __init__.py  config.py  core.py  dashboard.py
src/lime_survey_analyzer/viz/adapters/: __init__.py  lime_survey.py
src/lime_survey_analyzer/viz/charts/: __init__.py  base.py  horizontal_bar.py  ranking_stacked.py
src/lime_survey_analyzer/viz/utils/: __init__.py  files.py  text.py
tests/: conftest.py  data_generators.py  enhanced_data_generators.py  test_analyser_comprehensive.py  test_authentication.py  test_client.py  test_current_handlers.py  test_managers_fixed.py  test_managers_question.py  test_managers_response.py  test_managers_survey.py  test_question_types.py  test_ranking_questions.py  test_step1_integration.py  test_type_enforcement.py  test_verbosity.py  test_visualization.py
tests/integration/: test_analysis_processing.py  test_complete_pipeline.py  test_data_generation.py  test_simple_pipeline.py
tests/viz/: __init__.py  test_config.py  test_core_text.py  test_dashboard.py  test_dashboard_integration.py
tests/viz/test_adapters/: test_lime_survey_text.py
tests/viz/test_charts/: test_base.py
tests/viz/test_utils/: test_text.py
